--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,9 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag 设置 › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: wz # 主标题
+title: 王昭(wz) # 主标题
 
-tagline: A text-focused Jekyll theme # 将显示为副标题
+tagline: 王昭的个人页面 # 将显示为副标题
 
 description: >- # 用于 SEO 元数据和 atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
