提交信息描述

--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ twitter:
 social:
   # 修改为您的全名。
   # 将显示为文章的默认作者和页脚的版权所有者
-  name: WZ
+  name: wz
   email: 13603706832@163.com # 修改为您的邮箱地址
   links:
     # 第一个元素作为版权所有者的链接
