提交信息描述

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone: Asia/Shanghai
 # jekyll-seo-tag 设置 › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: 王昭(wz) # 主标题
+title: 王昭wz # 主标题
 
 tagline: 王昭的个人页面 # 将显示为副标题
 
